# QuickBSP

./: 00README.txt  CMakeLists.txt
include/quickbsp/: bsp.h  common.h  engine-inl.h  hrtimer.h  vertex_layer-inl.h
src/: bsp.cc
src/examples/: connected_component.cc  pagerank.cc  shortest_path.cc
